<resources>
    <string name="app_name">tuladha</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_menu_home">Beranda</string>
    <string name="tv_menu_class">Kelas</string>
    <string name="tv_menu_course">courses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_hi_user">Hai, parent</string>
    <string name="tv_lets_find_your_course">Mari temukan modulmu!</string>
    <string name="text_search_best_course">Cari modul Anda&#8230;</string>
    <string name="text_popular_course">Rekomendasi Course</string>
    <string name="text_see_all">Lihat Semua</string>
    <string name="text_class_topic">Pilihan Pembelajaran</string>
    <string name="text_filter">Filter</string>
    <string name="tv_btn_class_short">Ringkas</string>
    <string name="tv_btn_class_premium">Khusus</string>
    <string name="tv_btn_class_normal">Umum</string>
    <string name="tv_oopps">Maaf Kosong!</string>
    <string name="text_sorry_course_not_found">Maaf, Kursus tidak ditemukan</string>
    <string name="text_find_course">Cari Kursus</string>
    <string name="tv_current_class">Riwayat Kursus</string>
    <string name="tv_btn_in_progress">On Progress</string>
    <string name="tv_btn_finish">Selesai</string>
    <string name="tv_sort_by">Sort by</string>
    <string name="rb_sortby_newest">Terbaru</string>
    <string name="rb_sortby_most_popular">Populer</string>
    <string name="rb_sortby_promo">Rating</string>
    <string name="tv_category">Kategori</string>
    <string name="tv_children_age">Usia Anak</string>
    <string name="cb_beginner_level">0 - 3 Bulan</string>
    <string name="cb_intermediate_level">3 - 6 Bulan</string>
    <string name="cb_advanced_level">6 - 9 Bulan</string>
    <string name="tv_btn_apply_filter">Terapkan Filter</string>
    <string name="tv_reset_filter">Hapus Filter</string>
    <string name="exception_notif">maaf terdapat error, harap coba lagi</string>
    <string name="format_course_duration">%d Jam</string>
    <string name="format_course_by">by %s</string>
    <string name="format_course_module">%d Modul</string>
    <string name="format_btn_pelajari">Pelajari Sekarang</string>
    <string name="text_free">Gratis</string>
    <string name="text_other_class">Kelas Lainnya</string>
    <string name="text_total_price">Total Harga</string>
    <string name="teks_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_about_class">Tentang Kelas</string>
    <string name="text_benefit_follow_this_class">Keuntungan mengikuti kelas ini :</string>
    <string name="teks_murmer">Murah meriah</string>
    <string name="text_study_materials">Materi Belajar</string>
    <string name="tv_toast_you_have_to_pay_first">Anda harus bayar dahulu</string>
    <string name="text_follow_class">Ikuti Kelas</string>
    <string name="text_buy_class">Beli Kelas</string>
    <string name="tv_tab_detail_about">Tentang</string>
    <string name="tv_tab_detail_material_class">Materi Kelas</string>
    <string name="text_login">Login</string>
    <string name="text_email_or_phone_number">Email</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password">Lupa Kata Sandi</string>
    <string name="text_enter_password">Masukkan Password</string>
    <string name="text_register_here">Daftar di sini</string>
    <string name="text_login_without_account">Masuk Tanpa Akun</string>
    <string name="text_hint_email">ex: tuladha@gmail.com</string>
    <string name="text_register">Daftar</string>
    <string name="text_name">Nama</string>
    <string name="text_full_name">Nama Lengkap</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Nomor Telepon</string>
    <string name="text_hint_phone_numbeer">+62</string>
    <string name="text_create_password">Buat Password</string>
    <string name="text_hint_name_empty">Nama tidak boleh kosong</string>
    <string name="text_hint_password_empty">Password tidak boleh kosong</string>
    <string name="text_hint_password_length">Password minimal 8 karakter</string>
    <string name="text_hint_phonenumber_length">Nomor telepon minimal 10 karakter</string>
    <string name="text_have_an_acc_login">Sudah punya akun? Masuk di sini</string>
    <string name="text_delete_notification_confirmation">Apakah kamu yakin akan menghapus pemberitahuan ini ?</string>
    <string name="text_yes">Ya</string>
    <string name="text_no">Tidak</string>
    <string name="text_error_email_empty">Masukkan email!</string>
    <string name="text_error_email_invalid">Format email anda salah</string>
    <string name="text_error_password_empty">Masukkan password!</string>
    <string name="text_error_password_less_than_8_char">Password minimal 8 karakter!</string>
    <string name="text_error_phone_cannot_empty">Nomor telepon tidak boleh kosong!</string>
    <string name="text_login_to_continue">Login untuk mengexplore aplikasi!</string>
    <string name="text_create_your_account_now">Registrasi Akun</string>
    <string name="konfirm_password">Konfirmasi Password</string>
    <string name="text_pw_nomatch">Password tidak sesuai</string>
    <string name="text_dont_have_an_acc_create">Belum punya akun? Daftar di sini</string>
    <string name="tuladha">Tuladha</string>
    <string name="parenting_education">Tuladha Parenting</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_tuladha">Welcome to Tuladha</string>
    <string name="slide1_teks_onboarding">mulai perjalanan parenting terbaik mu!</string>
    <string name="slide2_onboarding1">setiap pola asuh itu unik</string>
    <string name="slide2onboarding_2">temukan tipe pola asuh yang cocok buat kamu!</string>
    <string name="with_tuladha">tuladha Parenting</string>
    <string name="onboarding_slide3_teks">Bantu dukung orang tua buat tumbuh dan berkembang si kecil!</string>
    <string name="get_started">Explore Now</string>
    <string name="desc_dialog_icon">iv_dialog_non_login</string>
    <string name="dialog_title">Maaf, Parent</string>
    <string name="dialog_message">Anda harus Login dahulu, untuk mengakses fitur ini!</string>
    <string name="dialog_sign_up_button">Login</string>
    <string name="desc_search">image view search</string>
    <string name="text_profile">Profile</string>
    <string name="form_username_profile">Username</string>
    <string name="tabel_email_profile">Email</string>
    <string name="email_profile_hint">ex: kevin@gmail.com</string>
    <string name="tv_tipe_pola_asuh">Tipe Pola Asuh</string>
    <string name="et_nomor_profile_hint">ex: +62813456782</string>
    <string name="tf_name">Username tidak terdeteksi</string>
    <string name="tf_email">Email tidak terdeteksi</string>
    <string name="text_save">SAVE</string>
    <string name="text_button_logout">Logout</string>
    <string name="text_dialog_logout">Hanya memastikan, Apakah Anda ingin Logout?</string>
    <string name="text_doalog_logout_back">kembali</string>
    <string name="text_phone_profile">Belum melakukan tes pola asuh</string>
    <string name="text_link_change_password">ubah password</string>
    <string name="text_link_edit_profile_success">data profile berhasil diedit</string>
    <string name="text_link_edit_profile_failed">data profile gagal diedit</string>
    <string name="text_dialog_change_pw">Link untuk mengubah password telah dikirim di email yang terdaftar</string>
    <string name="text_back">Kembali</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="format_btn_buy">Pelajari Sekarang</string>
    <string name="autotaritative">Autotaritative</string>
    <string name="authoritarian">Authoritarian</string>
    <string name="permissive">Permissive</string>
    <string name="strongly_disagree_radio_btn">Strongly Disagree</string>
    <string name="disagree_radio_btn">Disagree</string>
    <string name="agree_radio_btn">Agree</string>
    <string name="strongly_agree_radio_btn">Strongly Agree</string>
    <string name="next_btn">Next</string>
    <string name="questionNumber">Question %1$d/30</string>
    <string name="current_txt">Current</string>
    <string name="results_txt">Tipe Pola Asuh Anda</string>
    <string name="mentalQuestionNumber">%1$d/30</string>
    <string name="result_polaAsuh">Selamat, Tipe pola asuh Anda</string>
    <string name="desk_tespolaasuh_home">Ikuti tes singkat, untuk mengetahui pola asuhmu dan Akses ke layanan kami!</string>
    <string name="title_test_polasuhhome">Yuk, Kenali Gaya Pola Asuhmu!</string>
    <string name="start_tes">Mulai Tes</string>
    <string name="answer_1">Answer 1</string>
    <string name="next">Next</string>
    <string name="progres_bar">9/10</string>
    <string name="question">Dari pembelajaran ini pada anak Anda, berapa tingkat kesesuaian dari e-course yang diberikan? </string>
    <string name="exit">Kembali</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Sebelumnya</string>
    <string name="great_job">Bagus Sekali</string>
    <string name="correct_answer">Jawaban Benar: 0</string>
    <string name="incorrect_answer">Jawaban Salah: 0</string>
    <string name="next_to_assesment">Lanjut</string>
    <string name="back_to_course">Kembali ke Kursus</string>
    <string name="desk_next_Sectionn">Selanjutnya, silahkan kerjakan asesment berupa aktivitas prakter yang ditujukan kepada anak Anda</string>
    <string name="profil_akun">Profil Akun</string>
    <string name="fill_kids_data">Profil Anak</string>
</resources>