<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.profile.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/profil_akun"
        app:titleTextColor="@android:color/white" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:paddingBottom="100dp"
            android:layout_marginHorizontal="24dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@drawable/logo_tuladha"
                />

            <TextView
                android:id="@+id/tv_name_tabel_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/form_username_profile"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_text_profile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_rectangle_white_12"
                android:enabled="false"
                android:text="@string/tf_name"
                android:textColor="@color/black"
                android:layout_marginHorizontal="8dp"
                android:paddingHorizontal="14dp"
                android:textColorHint="@color/app_color_secondary_container"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_tabel_profile"/>

            <TextView
                android:id="@+id/tv_email_tabel_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:paddingTop="8dp"
                android:text="@string/tabel_email_profile"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/et_name_text_profile" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_text_profile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_rectangle_white_12"
                android:enabled="false"
                android:text="@string/tf_email"
                android:textColor="@color/black"
                android:layout_marginBottom="32dp"
                android:layout_marginHorizontal="8dp"
                android:paddingHorizontal="14dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_tabel_profile"/>

            <TextView
                android:id="@+id/tv_nomor_tabel_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:paddingTop="8dp"
                android:text="@string/tv_tipe_pola_asuh"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/et_email_text_profile" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nomor_text_profile"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:enabled="false"
                android:background="@drawable/bg_rectangle_white_12"
                android:text="@string/text_phone_profile"
                android:textColor="@color/black"
                android:layout_marginBottom="32dp"
                android:layout_marginHorizontal="8dp"
                android:paddingHorizontal="14dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_nomor_tabel_profile"/>


            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="8dp"
                android:text="@string/text_edit_profile"
                app:layout_constraintTop_toBottomOf="@+id/et_nomor_text_profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:id="@+id/btn_change_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_link_change_password"
                app:layout_constraintTop_toBottomOf="@+id/btn_edit_profile"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="8dp"
                />

            <Button
                android:id="@+id/logout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="8dp"
                android:text="@string/text_button_logout"
                app:layout_constraintTop_toBottomOf="@+id/btn_change_pw"/>

            <Button
                android:id="@+id/btn_add_kids"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginVertical="8dp"
                android:text="@string/fill_kids_data"
                app:layout_constraintTop_toBottomOf="@+id/logout_profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>






</androidx.constraintlayout.widget.ConstraintLayout>