<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/superBottomSheet_backgroundColor"
    android:padding="24dp"
    tools:context=".ui.filterDialog.FilterDialogFragment">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_sort_by"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/top_picks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_new"
                    style="@style/Widget.App.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_sortby_newest"
                    android:textColor="?attr/colorOnPrimaryContainer" />

                <RadioButton
                    android:id="@+id/rb_popular"
                    style="@style/Widget.App.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_sortby_most_popular"
                    android:textColor="?attr/colorOnPrimaryContainer" />

                <RadioButton
                    android:id="@+id/rb_promo"
                    style="@style/Widget.App.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_sortby_promo"
                    android:textColor="?attr/colorOnPrimaryContainer" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/level_class"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_category"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_filter_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_checkbox_filter" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/level_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/btn_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    style="@style/TextAppearance.Material3.TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_difficulty_level"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cb_beginner"
                    style="@style/Widget.App.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_beginner_level"
                    android:textColor="?attr/colorOnPrimaryContainer" />

                <CheckBox
                    android:id="@+id/cb_intermediate"
                    style="@style/Widget.App.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_intermediate_level"
                    android:textColor="?attr/colorOnPrimaryContainer" />

                <CheckBox
                    android:id="@+id/cb_advance"
                    style="@style/Widget.App.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_advanced_level"
                    android:textColor="?attr/colorOnPrimaryContainer" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btn_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="52dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/app_color_primary"
        android:text="@string/tv_btn_apply_filter"
        app:layout_constraintBottom_toTopOf="@id/tv_reset_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_reset_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="4dp"
        android:text="@string/tv_reset_filter"
        android:textColor="?attr/colorOnPrimaryContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>