<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/bg_kuis_course"
    android:padding="16dp"
    tools:context=".ui.kuisCourse.QuizResultActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/resultCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/white"
        app:contentPadding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/emojiImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/encouragingWords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/great_job"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tv_desk_next_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desk_next_Sectionn"
                android:textSize="16sp"
                android:visibility="visible"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:id="@+id/correctAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answer"
                android:textColor="@color/color_success"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/incorrectAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_answer"
                android:textColor="@color/color_warning"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/courseButton"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/back_to_course"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"/>

            <Button
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:visibility="visible"
                android:layout_height="wrap_content"
                android:text="@string/next_to_assesment"
                android:textColor="@color/white"
                android:backgroundTint="#2196F3"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
